--- a/src/TingenNyqvist.csproj
+++ b/src/TingenNyqvist.csproj
@@ -9,12 +9,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="AppData\Image\Control\copy-48.png" />
+    <None Remove="AppData\Image\Control\copy-96.png" />
+    <None Remove="AppData\Image\Control\format-xml-48.png" />
+    <None Remove="AppData\Image\Control\format-xml-96.png" />
+    <None Remove="AppData\Image\Control\paste-48.png" />
+    <None Remove="AppData\Image\Control\paste-96.png" />
+    <None Remove="AppData\Image\Control\reset-48.png" />
+    <None Remove="AppData\Image\Control\reset-96.png" />
     <None Remove="AppData\Image\Logo\tingen-nyqvist-logo-128x128.png" />
     <None Remove="AppData\Image\Logo\tingen-nyqvist-logo-256x256.png" />
     <None Remove="AppData\Image\Logo\tingen-nyqvist-logo-512x512.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="AppData\Image\Control\copy-48.png" />
+    <Resource Include="AppData\Image\Control\copy-96.png" />
+    <Resource Include="AppData\Image\Control\format-xml-48.png" />
+    <Resource Include="AppData\Image\Control\format-xml-96.png" />
+    <Resource Include="AppData\Image\Control\paste-48.png" />
+    <Resource Include="AppData\Image\Control\paste-96.png" />
+    <Resource Include="AppData\Image\Control\reset-48.png" />
+    <Resource Include="AppData\Image\Control\reset-96.png" />
     <Resource Include="AppData\Image\Logo\tingen-nyqvist-logo-128x128.png" />
     <Resource Include="AppData\Image\Logo\tingen-nyqvist-logo-256x256.png" />
     <Resource Include="AppData\Image\Logo\tingen-nyqvist-logo-512x512.png" />
